[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["Maksim Toguzov <magadan499@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
